@@ -122,6 +122,9 @@ ran with nothing to find)
 sbofind
 was unable to obtain a required file handle.
 .RE
+.RS
+13: circular dependencies detected.
+.RE
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
