@@ -82,6 +82,8 @@ can exit with the following codes:
 sboremove
 with nothing to remove.
 .RE
+.RS
+13: circular dependencies detected.
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
